# Rust-API

./: Cargo.toml  README.md  request_logs.json
src/: db.rs  main.rs
src/controllers/: controller.rs
src/middleware/: logger.rs
src/models/: request.rs
src/routes/: api.rs
