[package]
name = "api_call"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "mssql"] }
chrono = "0.4"
